<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    style="@style/mainLayoutMargin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

	<Spinner
            android:id="@+id/spinnerTypeOfElement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
        	android:entries="@array/str_ElementsArray"
        	android:prompt="@string/str_ElementsPrompt" />

    <Button
        android:id="@+id/generatePersonality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_GeneratePersonality" />

    <View
        android:id="@+id/View04"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_NewPersonality"
        android:layout_gravity="center_vertical|center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textNewPersonality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/str_None"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/img_ElementCircle"
        android:src="@drawable/main_background" />

</LinearLayout>